--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 name = "p1"
 path = "src/main.rs"
 
+[lib]
+name = "p1"
+path = "src/lib.rs"
+
 [dependencies]
 num-traits = "0.2.15"
 glfw = "0.51.0"
